--- a/impostazioni-tesi.tex
+++ b/impostazioni-tesi.tex
@@ -22,6 +22,7 @@
 \newcommand{\numberset}{\mathbb}
 \newcommand{\N}{\numberset{N}}
 \newcommand{\R}{\numberset{R}}
+\newcommand{\rusle}{\textbf{\textit{Rusle}}}
 
 % un ambiente per i sistemi
 \newenvironment{sistema}%
