Adding è ò maiuscle character working inside the project

--- a/impostazioni-tesi.tex
+++ b/impostazioni-tesi.tex
@@ -22,6 +22,9 @@
 \newcommand{\numberset}{\mathbb}
 \newcommand{\N}{\numberset{N}}
 \newcommand{\R}{\numberset{R}}
+
+\newcommand*{\egrave}{\MakeUppercase{è} }
+\newcommand*{\ograve}{\MakeUppercase{ò} }
 \newcommand{\rusle}{\textbf{\textit{Rusle}}}
 
 % un ambiente per i sistemi
